--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
             <li><a href="#">Contact Me</a></li>
         </ul>
     </nav>
+    <section id="home">
+        <div class="main">
+            <h1 class="headings">I AM <br> Joshua</h1>
+            <button class="btn">
+                Click Here
+            </button>
+        </div>
+    </section>
 </body>
 </html>
