--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
     <nav class="navbar">
         <ul>
             <li><a href="#">Home</a></li>
@@ -16,12 +17,24 @@
             <li><a href="#">Contact Me</a></li>
         </ul>
     </nav>
+
     <section id="home">
         <div class="main">
             <h1 class="headings">I AM <br> Joshua</h1>
             <button class="btn">
                 Click Here
             </button>
+        </div>
+    </section>
+
+    <section id="about">
+        <div id="pic">
+            <h1 class="headings"> About Us</h1>
+            <img src="" alt="">
+            <div id="intro">
+                <h2>Joshua</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, quidem quos ut, consequatur repudiandae quod ducimus adipisci blanditiis mollitia earum neque sint sed quibusdam illo ea aspernatur sequi perferendis accusamus.</p>
+            </div>
         </div>
     </section>
 </body>
