--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </section>
 
     <section id="about">
+        <h1 class="headings"> About Us</h1>
         <div id="pic">
-            <h1 class="headings"> About Us</h1>
-            <img src="" alt="">
+            <img src="./media/1.gif" alt="">
             <div id="intro">
                 <h2>Joshua</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, quidem quos ut, consequatur repudiandae quod ducimus adipisci blanditiis mollitia earum neque sint sed quibusdam illo ea aspernatur sequi perferendis accusamus.</p>
