--- a/index.html
+++ b/index.html
@@ -37,5 +37,27 @@
             </div>
         </div>
     </section>
+
+    <section id="portfolio">
+        <h1 class="headings">portfolio</h1>
+        <div class="gallery">
+            <img src="./media/1.gif" alt="">
+            <img src="./media/2.gif" alt=""> 
+            <img src="./media/3.gif" alt="">
+            <img src="./media/4.gif" alt=""> 
+            <img src="./media/5.gif" alt="">
+            <img src="./media/6.gif" alt="">
+        </div> 
+       </section>
+
+    <section id="services">
+        <h1 class="headings">Service</h1>
+        <div class="row">
+            <div class="box">
+                <h1 class="headings">importtant</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
