--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contacts">Contact Me</a></li>
         </ul>
     </nav>
 
@@ -53,11 +53,42 @@
     <section id="services">
         <h1 class="headings">Service</h1>
         <div class="row">
-            <div class="box">
+            <div class="box"> 
+                <img src="./media/1.gif" alt="">
+                <h1 class="headings">importtant</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
+            </div>
+            <div class="box"> 
+                <img src="./media/1.gif" alt="">
+                <h1 class="headings">importtant</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
+            </div>
+            <div class="box"> 
+                <img src="./media/1.gif" alt="">
+                <h1 class="headings">importtant</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
+            </div>
+            <div class="box"> 
+                <img src="./media/1.gif" alt="">
+                <h1 class="headings">importtant</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
+            </div>
+            <div class="box"> 
+                <img src="./media/1.gif" alt="">
                 <h1 class="headings">importtant</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum autem voluptas, sed accusantium voluptatem vel provident repellendus eaque nesciunt odit vero at iure! Tenetur magnam quam assumenda earum, reiciendis distinctio.</p>
             </div>
         </div>
     </section>
+
+    <section id="contacts">
+        <h1 class="headings"> contacts</h1>
+        <form action="" class="form">
+            <input type="text" name="name" class="input" placeholder="Enter Your Name">
+            <input type="email" name="email" class="input" placeholder="Enter Yuor Email">
+            <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Enter your Message"></textarea>
+            <input type="submil" value="SEND" id="send">
+        </form>
+</section>
 </body>
 </html>
