--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="#home" onclick="navigateTo('home')">Home</a></li>
-            <li><a href="#about"onclick="navigateTo('about')">About Us</a></li>
-            <li><a href="#portfolio" onclick="navigateTo('portfolio')">Portfolio</a></li>
-            <li><a href="#services" onclick="navigateTo('services')">Services</a></li>
-            <li><a href="#contacts" onclick="navigateTo('contacts')">Contact Me</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contacts">Contact Me</a></li>
         </ul>
     </nav>
 
